--- a/app/vues/templates/gabarits/gabarit-frontend.twig
+++ b/app/vues/templates/gabarits/gabarit-frontend.twig
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" href="assets/css/components/catalogue-header.css">
 		<link rel="stylesheet" href="assets/css/components/cta.css">
 		<link rel="stylesheet" href="assets/css/components/stampcard.css">
+		<link rel="stylesheet" href="assets/css/components/card-detail.css">
 		<link rel="stylesheet" href="assets/css/components/footer.css">
 		<link rel="stylesheet" href="assets/css/icons.css">
 		<link rel="stylesheet" href="assets/css/utilities.css">
@@ -126,9 +127,9 @@
 				<div class="footer-main-content">
 					<h3>À propos</h3>
 					<p class="no-padding-bottom">Lord Stampee vient d’une famille de passionnés de philatélie depuis des
-																																																																																																																																																																		                    générations. Sa passion pour
-																																																																																																																																																																		                    les timbres rares et précieux l'a amené à rassembler l'une des collections les plus impressionnantes
-																																																																																																																																																																		                    du monde.</p>
+																																																																																																																																																																								                    générations. Sa passion pour
+																																																																																																																																																																								                    les timbres rares et précieux l'a amené à rassembler l'une des collections les plus impressionnantes
+																																																																																																																																																																								                    du monde.</p>
 					<a href="#">En savoir plus</a>
 				</div>
 				<div class="footer-main-content">
